<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <RelativeLayout
        android:id="@+id/bg_Login"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/yellow_500">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUserName"
                    android:padding="10dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"/>

                <EditText
                    android:id="@+id/editEmail"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/editPhone"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextPasword"
                        android:padding="10dp"
                        android:inputType="textPassword"
                        android:background="@drawable/custom_edittext"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pasword"/>

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16dp"
                    android:text="@string/register"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>